--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 <body>
     <h1>Hello World</h1>
     <h3>Some changes</h3>
+    <ol>
+        <li>I</li>
+        <li>am</li>
+        <li>such</li>
+        <li>a</li>
+        <li>maverick</li>
+    </ol>
 </body>
 </html>
